--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="css/styles.css" >
 
-    <title>My Homework 6!</title>
+    <title>My Homework 7!</title>
 
 </head>
 
@@ -28,7 +28,7 @@
         <div class="container main-header-section">
             <nav class="nav-menu-liststyle">
                 <a class="logo-style link" href="./index.html">WEB<span class="studio">STUDIO</span></a>
-                <!--MENU-->
+               <div class="top-line-bg"></div> <!--MENU-->
                 <ul class="style-list">
                     <li class="nav-menu-style">
                         <a class="link-style-menu link effect-active" href="./index.html">Studio</a>
@@ -40,6 +40,7 @@
                         <a class="link-style-menu link" href="">Contacts</a>
                     </li>
                 </ul>
+               </div>
             </nav>
             <!--ADDRESS-->
             <address class="address-style-list">
